# Logistics_Race

./: OpenCV_detect.py  README.md
OpenCV_detect/detectball-main/: CMakeLists.txt  README.md  main.cpp  shell.sh  test.cpp
OpenCV_detect/detectball-main/.cache/clangd/index/: CMakeCXXCompilerId.cpp.D14D4143DFBD733C.idx  EllipseDetectorYaed.cpp.FB3A04F6A4F3D20D.idx  EllipseDetectorYaed.h.A92FA31B4447DB9A.idx  FindBall.cpp.862D108535E92CD6.idx  FindBall.hpp.BB5DDC373EAEC07B.idx  adaptive_manifold_filter_n.cpp.446FE753C6F04490.idx  advanced_types.hpp.873057D4C58034B0.idx  anisodiff.cpp.15A362F2F5AA0100.idx  bilateral_texture_filter.cpp.96E31B3213A17A27.idx  brightedges.cpp.9D10FA158F4E4E74.idx  brightedges.hpp.445A62E32F3AA019.idx  brightedges.hpp.78817C01CF8AF345.idx  brightedgesexample.cpp.52946854E88AF27E.idx  color_match.hpp.600DEC8E3FB2BE3F.idx  color_match.hpp.A2A45AE0C2846A99.idx  color_match_template.cpp.E4884A6FD66133DE.idx  colorize.cpp.00D49D59B7498E59.idx  common.cpp.1A5D667114EE6B11.idx  common.h.B621397F821D8BC0.idx  deriche_demo.cpp.F0C96AAC42AFEF47.idx  deriche_filter.cpp.E5226D32C3132DB2.idx  deriche_filter.hpp.8527BE2BB0B96A7E.idx  deriche_filter.hpp.DB70389CC9020F8F.idx  disparity_filter.hpp.37345E46FB1FD6CC.idx  disparity_filter.hpp.833063BB67305557.idx  disparity_filtering.cpp.343B5E9AC618A638.idx  disparity_filters.cpp.E3EF0201C7C8948A.idx  dtfilter_cpu.cpp.3B7926D485860F6F.idx  (+160 more)
OpenCV_detect/detectball-main/inc/: FindBall.hpp
OpenCV_detect/detectball-main/src/: FindBall.cpp
OpenCV_detect/detectball-main/ximgproc/src/: edge_drawing.cpp  precomp.hpp
(+125 files in other folders)
